--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,63 +1,38 @@
-.wholepage {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: teal;
-}
-
-.center {
-  background: rgba(0, 0, 0, .7);
-  position: absolute;
-  left: 0;
-  top: 0;
-  transform: translate(50%, 50%);
-  min-height: 500px;
-  width: 300px;
-  color: white;
-}
-
-#login-tab {
-  font-size: 20px;
-  /*float: right;*/
-  text-align: center;
-}
-
-#register-tab {
-  font-size: 20px;
-  text-align: center;
-  /*float: left;*/
-}
-
-.comment-date{
+.comment-date {
   font-size: 11px;
   padding: 0;
-
 }
-.media{
+.media {
   position: relative;
-
 }
-.dropshadowclass, .card {
-  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12)
+.dropshadowclass,
+.card {
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+    0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
-.button-dropshadow,.btn{
-  -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
-    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15)
+.button-dropshadow,
+.btn {
+  -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18),
+    0 4px 15px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
 hr.style-hr {
   border: 0;
   height: 1px;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.30), rgba(0, 0, 0, 0));
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.3),
+    rgba(0, 0, 0, 0)
+  );
 }
 
-.sticky-top{
+.sticky-top {
   top: 30px;
 }
 
-.btn-info{
+.btn-info {
   background-color: #33b5e5 !important;
   color: #fff !important;
   border: none;
@@ -65,16 +40,16 @@ hr.style-hr {
 }
 
 .btn-info:hover {
-    background-color: #4abde8 !important;
+  background-color: #4abde8 !important;
 }
 
 .btn-info.active,
 .btn-info:active,
 .btn-info:focus {
-    background-color: #14799e !important;
+  background-color: #14799e !important;
 }
 
-.blog-img{
+.blog-img {
   max-height: 300px !important;
 }
 /*
@@ -82,27 +57,25 @@ hr.style-hr {
   max-height: 470px !important;
 }*/
 
-.description-index{
+.description-index {
   padding: 0;
   margin: 0;
 }
 
-.user-info-index{
+.user-info-index {
   font-size: 12px;
-  padding: 0!important;
-
+  padding: 0 !important;
 }
-.date-index{
+.date-index {
   font-size: 12px;
-
 }
-.sticky-top{
+.sticky-top {
   z-index: 5;
 }
 
-.comment-pic{
+.comment-pic {
   width: 75px;
 }
-.author-pic{
+.author-pic {
   width: 100px;
 }
