--- a/views/posts/onepost.handlebars
+++ b/views/posts/onepost.handlebars
@@ -128,7 +128,7 @@
           {{!-- Comment --}}
           <div class="card mb-4">
             <div class="card-header">
-              <span># Comments</span>
+              <span>Comments</span>
             </div>
             <div class="card-body">
               <form action="/posts/{{id}}" method="POST">
