--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,4 +1,4 @@
 <h1 class="mt-3">About</h1>
 
-<p>This is a node/express blog app for multiple users with comment functionality as well as adding/editting/deleting of posts</p>
+<p>This is a node/express blog app for multiple users with registration/login functionality as well as commenting and adding/editing/deleting of posts.</p>
 <p>Version: 1.0.0</p>
