--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -6,11 +6,11 @@
       <form action="/users/login" method="POST">
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="email" class='form-control' name="email" required>
+          <input type="email" class='form-control' name="email" value="test@gmail.com" required>
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" name="password" class="form-control" required>
+          <input type="password" name="password" class="form-control" value="test" required>
         </div>
         <button type="submit" class="btn btn-success btn-block">Sign in</button>
       </form>
